--- a/views/pages/researchInterests.ejs
+++ b/views/pages/researchInterests.ejs
@@ -31,13 +31,33 @@ style='background-image:url("<% if(dirName) { %><%=dirName%><%}%>/img/bg/bg2.jpg
           <img src="<% if(dirName) { %><%=dirName%><%}%>/img/research/e1.jpg" class='research-img' alt="Nucleo-Mitochondrial Communicome">
         </div>
         <div class='auto cell'>
-          <p>The central hypothesis that guides our research is that stochastic, endogenous nuclear DNA damage alters cellular and metabolic programs, leading to progression of multiple, age- related degenerative diseases. There is growing evidence that nuclear DNA (nDNA) damage accumulates with age and correlates with pathology in several tissues. Furthermore, there is evidence that nDNA repair capacity declines with age. We use a physiologically relevant system in which DNA repair is attenuated, leading to an accelerated accumulation of endogenous damage, to investigate the molecular and cellular response circuitry.
+          <p>
+            The central hypothesis that guides our research is that stochastic, endogenous nuclear
+            DNA damage alters cellular and metabolic programs, leading to progression of multiple,
+            age- related degenerative diseases. There is growing evidence that nuclear DNA (nDNA)
+            damage accumulates with age and correlates with pathology in several tissues.
+            Furthermore, there is evidence that nDNA repair capacity declines with age. We use a
+            physiologically relevant system in which DNA repair is attenuated, leading to an
+            accelerated accumulation of endogenous damage, to investigate the molecular and
+            cellular response circuitry.
           </p>
           <p>
-            Depletion of a DNA repair endonuclease, ERCC1-XPF in mice (as in humans), leads to premature onset of molecular, structural and functional changes that mimic normal aging and the mice spontaneously develop numerous age-related diseases in their 6 month lifespan. Surprisingly, loss of functional Ercc1 (strictly a nuclear DNA repair enzyme) causes accrual of defective mitochondria and an increase in reactive oxygen species (ROS) in vitro and in vivo. This suggests that nuclear DNA damage leads to mitochondrial reprogramming, and identification of the signaling mechanism(s) that drive this is likely to yield novel insights about molecular mechanisms of aging, as well as, novel targets for preventing cell senescence and age-related decline. 
+            Depletion of a DNA repair endonuclease, ERCC1-XPF in mice (as in humans), leads to
+            premature onset of molecular, structural and functional changes that mimic normal aging
+            and the mice spontaneously develop numerous age-related diseases in their 6 month
+            lifespan. Surprisingly, loss of functional Ercc1 (strictly a nuclear DNA repair enzyme)
+            causes accrual of defective mitochondria and an increase in reactive oxygen species
+            (ROS) in vitro and in vivo. This suggests that nuclear DNA damage leads to
+            mitochondrial reprogramming, and identification of the signaling mechanism(s) that
+            drive this is likely to yield novel insights about molecular mechanisms of aging, as well
+            as, novel targets for preventing cell senescence and age-related decline.
           </p>
           <p>
-            To study this we use the strengths of two very powerful model systems: the nematode, Caenorhabditis elegans  (C. elegans), a genetically tractable model organism to identify pathways involved in mitochondrial dysfunction in response to nuclear DNA damage, and mice, a physiologically relevant model in which to pursue “hits” to ultimately support rapid translation of new knowledge to human aging.
+            To study this we use the strengths of two very powerful model systems: the nematode,
+            Caenorhabditis elegans (C. elegans), a genetically tractable model organism to identify
+            pathways involved in mitochondrial dysfunction in response to nuclear DNA damage,
+            and mice, a physiologically relevant model in which to pursue “hits” to ultimately
+            support rapid translation of new knowledge to human aging.
           </p>
         </div>
       </div>
