--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -87,7 +87,7 @@ style='background-image:url("img/bg/bg2.jpg")'>
         <p>
           <%=results.researchIntrest[i].description %>
         </p>
-        <a href="./research-interests/<%=results.researchIntrest[i].title.replace(/\s/g, '_')%>">
+        <a class='animated-arrow'  href="./research-interests/<%=results.researchIntrest[i].title.replace(/\s/g, '_')%>">
           <span class='the-arrow -left'>
             <span class='shaft'></span>
           </span>
@@ -132,8 +132,8 @@ style='background-image:url("img/bg/bg3.jpg")'>
       </div>
     <% } %>
   </div>
-  <div class='cell'>
-    <a href="./Publications">
+  <div class='cell small-12'>
+    <a class='animated-arrow' href="./Publications">
       <span class='the-arrow -left'>
         <span class='shaft'></span>
       </span>
@@ -206,7 +206,7 @@ style='background-image:url("img/bg/bg5.jpg")'>
       </div>
     <% } %>
     <div class='cell'>
-      <a href="./news">
+      <a class='animated-arrow' href="./news">
         <span class='the-arrow -left'>
           <span class='shaft'></span>
         </span>
