--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -162,12 +162,12 @@ style='background-image:url("img/bg/bg4.jpg")'>
   <div class='cell medium-8 medium-offset-2'>
     <% for (let i = 0; i < results.team.length; i++) { %>
       <div class='grid-x grid-padding-x grid-margin-y team-card' data-equalizer>
-        <div class='cell shrink small-12 center out-vc border-right'>
+        <div class='cell shrink center out-vc border-right'>
           <div class='in-vc'>
             <img class='team-img' src='<%=results.team[i].image %>'>
           </div>
         </div>
-        <div class='cell small-12 auto out-vc'>
+        <div class='cell auto out-vc'>
           <div class='in-vc'>
             <h5><%=results.team[i].name %> <%=results.team[i].title ? ` | ${results.team[i].title}` : `` %></h5>
             <p><%=results.team[i].Description %></p>
