--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -83,9 +83,9 @@ style='background-image:url("img/bg/bg2.jpg")'>
           class='card-img'
           style='background-image: url("<%=results.researchIntrest[i].image %>");'
         >
-        <div class='my-card-header'>
-
-        </div>
+          <div class='my-card-header'>
+            <h4><%=results.researchIntrest[i].title %></h4>
+          </div>
         </div>
         <h4><%=results.researchIntrest[i].title %></h4>
         <p>
