--- a/public/css/app.css
+++ b/public/css/app.css
@@ -145,7 +145,7 @@ body {
   background-attachment: scroll;
   background-position: center;
   background-size: cover;
-  height: 250px;
+  height: 300px;
   width: 100%;
   margin-bottom: 20px;
   position: relative;
@@ -155,6 +155,7 @@ body {
   bottom: 0px;
   background-color: rgba(2, 2, 2, 0.3);
   color: #ffffff;
+  width: 100%;
 }
 
 /* Publication styles */
