--- a/public/css/app.css
+++ b/public/css/app.css
@@ -153,9 +153,10 @@ body {
 .my-card-header {
   position: absolute;
   bottom: 0px;
-  background-color: rgba(2, 2, 2, 0.3);
+  background-color: rgba(2, 2, 2, 0.1);
   color: #ffffff;
   width: 100%;
+  height: 100%;
 }
 
 /* Publication styles */
