--- a/public/css/app.css
+++ b/public/css/app.css
@@ -153,8 +153,8 @@ body {
 .my-card-header {
   position: absolute;
   bottom: 0px;
-  background-color: rgba(2, 2, 2, 0.3);
-  color: #ffffff;
+  background-color: rgba(255, 255, 255, 0.3);
+  color: #222;
   width: 100%;
 }
 
