--- a/public/css/app.css
+++ b/public/css/app.css
@@ -156,6 +156,7 @@ body {
   background-color: rgba(255, 255, 255, 0.3);
   color: #222;
   width: 100%;
+  padding: 10px;
 }
 
 /* Publication styles */
