--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -117,7 +117,7 @@ style='background-image:url("img/bg/bg3.jpg")'>
 </div>
 <div class='grid-x grid-padding-x grid-container grid-padding-y add-padd'  data-equalizer>
   <div class='cell'>
-    <h3 class='center'>Welcome</h3>
+    <h3 class='center'>Recent Publications</h3>
     <hr class="center-ball">
   </div>
   <div class='grid-x medium-up-3'>
