--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -127,7 +127,7 @@ style='background-image:url("img/bg/bg3.jpg")'>
           <h4 class='publication-heading'>
             <%=results.publications[i].title %>
           </h4>
-          <p class='publiction-journel'><%=results.publications[i].journal %></p>
+          <h5 class='publiction-journel'><%=results.publications[i].journal %></h5>
         </div>
       </div>
     <% } %>
