--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -123,7 +123,7 @@ style='background-image:url("img/bg/bg3.jpg")'>
   <div class='grid-x medium-up-3'>
     <% for (let i = 0; i < 3; i++) { %>
       <div class='cell'>
-        <div class='my-card'>
+        <div class='my-card my-research-intrest'>
           <h4 class='publication-heading'>
             <%=results.publications[i].title %>
           </h4>
