--- a/public/css/app.css
+++ b/public/css/app.css
@@ -150,7 +150,7 @@ body {
   margin-bottom: 20px;
   position: relative;
 }
-.my-research-intrest {
+.my-research-interest {
   height: 450px;
 }
 .my-card-header {
