--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -80,7 +80,7 @@ style='background-image:url("img/bg/bg2.jpg")'>
     <div class='cell'>
       <div class='my-card'>
         <div 
-          class='card-img'
+          class='card-img my-research-interest'
           style='background-image: url("<%=results.researchIntrest[i].image %>");'
         >
           <div class='my-card-header'>
@@ -123,7 +123,7 @@ style='background-image:url("img/bg/bg3.jpg")'>
   <div class='grid-x medium-up-3'>
     <% for (let i = 0; i < 3; i++) { %>
       <div class='cell'>
-        <div class='my-card my-research-intrest'>
+        <div class='my-card'>
           <h4 class='publication-heading'>
             <%=results.publications[i].title %>
           </h4>
