--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -238,9 +238,9 @@ style='background-image:url("img/bg/bg3.jpg")'>
     <div class='in-vc'>
       <h5>Phone: <a href="tel:+1(412) 624-7494">(412) 624-7494</a><br/>
         Email: <a href="mailto:agurkar1@pitt.edu">agurkar1@pitt.edu</a></h5>
-      <h5>Administrative Assistant: Beth Thomas</h5>
+      <h5>Administrative Assistant: Kathy Brickett</h5>
       <h5>Phone: <a href="tel:+1(412) 864-2507">(412) 864-2507</a><br/>
-        E-mail: <a href="mailto:agurkar1@pitt.edu">eat8@pitt.edu</a></h5>
+        E-mail: <a href="mailto:kab389@pitt.edu">kab389@pitt.edu</a></h5>
     </div>
   </div>
   <div class='cell out-vc' data-equalizer-watch>
