--- a/public/css/app.css
+++ b/public/css/app.css
@@ -155,11 +155,21 @@ body {
 }
 .my-card-header {
   position: absolute;
-  bottom: 0px;
+  top: 0px;
   background-color: rgba(255, 255, 255, 0.1);
   color: #222;
   width: 100%;
   padding: 10px;
+  text-align: 'center';
+}
+
+.my-card-footer {
+  position: absolute;
+  bottom: 0px;
+  color: #222;
+  width: 100%;
+  padding: 10px;
+  text-align: center;
 }
 
 /* Publication styles */
