--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -86,20 +86,22 @@ style='background-image:url("img/bg/bg2.jpg")'>
           <div class='my-card-header'>
             <h4><%=results.researchIntrest[i].title %></h4>
           </div>
+          <div class='my-card-footer'>
+            <a class='animated-arrow'  href="./research-interests/<%=results.researchIntrest[i].title.replace(/\s/g, '_')%>">
+              <span class='the-arrow -left'>
+                <span class='shaft'></span>
+              </span>
+              <span class='main'>
+                <span class='text'>
+                  Learn More
+                </span>
+                <span class='the-arrow -right'>
+                  <span class='shaft'></span>
+                </span>
+              </span>
+            </a>
+          </div>
         </div>
-        <a class='animated-arrow'  href="./research-interests/<%=results.researchIntrest[i].title.replace(/\s/g, '_')%>">
-          <span class='the-arrow -left'>
-            <span class='shaft'></span>
-          </span>
-          <span class='main'>
-            <span class='text'>
-              Learn More
-            </span>
-            <span class='the-arrow -right'>
-              <span class='shaft'></span>
-            </span>
-          </span>
-        </a>
       </div>
     </div>
   <% } %>
