--- a/public/css/app.css
+++ b/public/css/app.css
@@ -593,6 +593,9 @@ hr.center-ball:before {
 .center {
   text-align: center;
 }
+.bold {
+  font-weight: 700;
+}
 .border-right {
   border-right: 1px solid #f1f1f1;
 }
