--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -83,7 +83,7 @@ style='background-image:url("img/bg/bg2.jpg")'>
           class='card-img my-research-interest'
           style='background-image: url("<%=results.researchIntrest[i].image %>");'
         >
-          <div class='my-card-header center'>
+          <div class='my-card-header center bold'>
             <h4><%=results.researchIntrest[i].title %></h4>
           </div>
           <div class='my-card-footer'>
