--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -134,7 +134,7 @@ style='background-image:url("img/bg/bg3.jpg")'>
       </div>
     <% } %>
   </div>
-  <div class='cell small-12'>
+  <div class='cell small-12 center'>
     <a class='animated-arrow' href="./Publications">
       <span class='the-arrow -left'>
         <span class='shaft'></span>
@@ -207,7 +207,7 @@ style='background-image:url("img/bg/bg5.jpg")'>
         </div>
       </div>
     <% } %>
-    <div class='cell'>
+    <div class='cell center'>
       <a class='animated-arrow' href="./news">
         <span class='the-arrow -left'>
           <span class='shaft'></span>
