--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -200,7 +200,7 @@ style='background-image:url("img/bg/bg5.jpg")'>
             class='card-img'
             style='background-image: url("<%=results.news[i].image %>");'
           >
-          <div class='my-card-header'>
+          <div class='my-card-footer'>
             <h4><%=results.news[i].name %></h4>
           </div>
         </div>
