--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -207,7 +207,7 @@ style='background-image:url("img/bg/bg5.jpg")'>
         </div>
       </div>
     <% } %>
-    <div class='cell '>
+    <div class='cell center'>
       <a class='animated-arrow' href="./news">
         <span class='the-arrow -left'>
           <span class='shaft'></span>
