--- a/public/css/app.css
+++ b/public/css/app.css
@@ -586,6 +586,11 @@ hr.center-ball:before {
 }
 
 
+/* foundation styles */
+.grid-container {
+  max-width: 95rem;
+}
+
 /* spacing styles */
 .add-padd {
   padding: 20px 0;
