--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6,7 +6,7 @@ Blue: #32485c;
 /* Text Styles */
 p {
   font-family: "hk_groteskmedium",sans-serif;
-  font-size: 5vw;
+  font-size: 18px;
 }
 h1, h2, h3, h4, h5, h5 {
   font-family: "Amiri",serif;
