--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -173,7 +173,7 @@ style='background-image:url("img/bg/bg4.jpg")'>
         <div class='cell auto out-vc'>
           <div class='in-vc'>
             <h5><%=results.team[i].name %> <%=results.team[i].title ? ` | ${results.team[i].title}` : `` %></h5>
-            <p><%=results.team[i].Description %></p>
+            <p class='web-pro-text'><%=results.team[i].Description %></p>
           </div>
         </div>
       </div>
