--- a/public/css/app.css
+++ b/public/css/app.css
@@ -589,9 +589,9 @@ hr.center-ball:before {
 
 /* foundation styles */
 @media print, screen and (min-width: 84em) {
-  .grid-container {
+  /* .grid-container {
     max-width: 95rem;
-  }
+  } */
   .web-pro-text {
     font-size: 1.5rem;
   }
