--- a/public/css/app.css
+++ b/public/css/app.css
@@ -170,6 +170,7 @@ body {
   width: 100%;
   padding: 10px;
   text-align: center;
+  background-color: rgba(255, 255, 255, 0.6);
 }
 
 /* Publication styles */
