--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -83,7 +83,7 @@ style='background-image:url("img/bg/bg2.jpg")'>
           class='card-img my-research-interest'
           style='background-image: url("<%=results.researchIntrest[i].image %>");'
         >
-          <div class='my-card-footer'>
+          <div class='my-card-footer' data-equalizer-watch>
             <h4 class='center bold'><%=results.researchIntrest[i].title %></h4>
           </div>
         </div>
