--- a/views/pages/researchInterests.ejs
+++ b/views/pages/researchInterests.ejs
@@ -5,26 +5,14 @@ class='bg-img'
 style='background-image:url("<% if(dirName) { %><%=dirName%><%}%>/img/bg/bg2.jpg")'>
   <div class='bg-center-container'>
     <h1 class='bg-heading'>
-      <% if (tab === 'Characterize novel regulators of DNA damage-dependent metabolic reprogramming'.replace(/\s/g, '_')) {
-      %>
-      Characterize novel regulators of DNA damage-dependent metabolic reprogramming
-      <%
-      } else if (tab === 'Understanding the role of DNA damage in driving post-mitotic tissue aging'.replace(/\s/g, '_'))
-      {
-      %>
-      Understanding the role of DNA damage in driving post-mitotic tissue aging
-      <%} else if (tab === 'How old are you? No really'.replace(/\s/g, '_'))
-      {%>
-        How old are you? No really
-      <%
-      }
+      <%=researchData.name
       %>
     </h1>
   </div>
 </div>
 <div class='grid-x grid-container add-padd' >
   <div class='cell'>
-    <% if (tab === 'Characterize novel regulators of DNA damage-dependent metabolic reprogramming'.replace(/\s/g, '_')) {
+    <% if (tab === researchData.name.replace(/\s/g, '_')) {
       %>
       <div class='grid-x grid-padding-x'>
         <div class='auto cell'>
@@ -59,7 +47,7 @@ style='background-image:url("<% if(dirName) { %><%=dirName%><%}%>/img/bg/bg2.jpg
         </div>
       </div>
       <%
-      } else if (tab === 'Understanding the role of DNA damage in driving post-mitotic tissue aging'.replace(/\s/g, '_'))
+      } else if (tab === researchData.name.replace(/\s/g, '_'))
       {
       %>
       <div class='grid-x grid-padding-x'>
@@ -81,7 +69,7 @@ style='background-image:url("<% if(dirName) { %><%=dirName%><%}%>/img/bg/bg2.jpg
           </p>
         </div>
       </div>
-      <% } else if (tab === 'How old are you? No really'.replace(/\s/g, '_'))
+      <% } else if (tab === researchData.name.replace(/\s/g, '_'))
       {%>
         <p><em>“Why people age differently?”</em></p>
         <p>Although, one’s chronological age maybe the same (the age that you calculate from your birth certificate), two people who are 65, rarely feel the same. One seems healthy, strong, may complain occasionally about joint pain- but overall is fit, whereas, the other suffers from diabetes, dementia and heart disease. WHY? 
