--- a/public/css/app.css
+++ b/public/css/app.css
@@ -108,8 +108,11 @@ body {
 }
 
 /* banners */
-.bg-img {
+.bg-main-header {
   padding: 20vh 0;
+}
+.bg-img {
+  padding: 17vh 0;
 	width: 100%;
 	background-attachment: fixed;
 	background-position: center;
