--- a/views/pages/aditiGurkar.ejs
+++ b/views/pages/aditiGurkar.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/head %>
 <% include ../partials/header %>  
 <div
-class='bg-img'
+class='bg-img bg-main-header'
 style='background-image:url("img/bg/aditi.jpg")'>
   <div class='bg-center-container'>
     <h1 class='bg-heading'>
