--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -192,7 +192,36 @@ style='background-image:url("img/bg/bg5.jpg")'>
 
 <div class='grid-x grid-padding-x grid-container medium-up-3 grid-padding-y add-padd' >
     <% for (let i = 0; i < 3; i++) { %>
-      <div class='cell'>
+      <div class="marketing-site-content-section">
+        <% if(i % 2) {%>
+        <div class="marketing-site-content-section-img">
+          <img src="<%=results.news[i].image %>" alt="" />
+        </div>
+        <%}%>
+        <div class="marketing-site-content-section-block">
+          <h3 class="marketing-site-content-section-block-header"><%=results.news[i].name%></h3>
+          <p class="marketing-site-content-section-block-subheader subheader"><%results.news[i].description%></p>
+          <a class='animated-arrow' href="./news">
+            <span class='the-arrow -left'>
+              <span class='shaft'></span>
+            </span>
+            <span class='main'>
+              <span class='text'>
+                View All News
+              </span>
+              <span class='the-arrow -right'>
+                <span class='shaft'></span>
+              </span>
+            </span>
+          </a>
+        </div>
+        <% if(!(i % 2)) {%>
+          <div class="marketing-site-content-section-img">
+            <img src="<%=results.news[i].image %>" alt="" />
+          </div>
+        <%}%>
+      </div>      
+      <!-- <div class='cell'>
         <div class='my-card'>
           <div 
             class='card-img'
@@ -203,7 +232,7 @@ style='background-image:url("img/bg/bg5.jpg")'>
           </div>
         </div>
         </div>
-      </div>
+      </div> -->
     <% } %>
     <div class='cell center'>
       <a class='animated-arrow' href="./news">
