--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -200,7 +200,7 @@ style='background-image:url("img/bg/bg5.jpg")'>
         <%}%>
         <div class="marketing-site-content-section-block">
           <h2 class="marketing-site-content-section-block-header"><%=results.news[i].name%></h2>
-          <p class="marketing-site-content-section-block-subheader web-pro-text subheader"><%=results.news[i].description%></p>
+          <p class="marketing-site-content-section-block-subheader web-pro-text subheader"><%-results.news[i].description%></p>
           <a class='animated-arrow' href="./news">
             <span class='the-arrow -left'>
               <span class='shaft'></span>
