--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -199,7 +199,7 @@ style='background-image:url("img/bg/bg5.jpg")'>
         </div>
         <%}%>
         <div class="marketing-site-content-section-block">
-          <h2 class="marketing-site-content-section-block-header"><%=results.news[i].name%></h2>
+          <h2 class="marketing-site-content-section-block-header"><%-results.news[i].name%></h2>
           <p class="marketing-site-content-section-block-subheader web-pro-text subheader"><%-results.news[i].description%></p>
           <a class='animated-arrow' href="./news">
             <span class='the-arrow -left'>
