--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -125,7 +125,7 @@ style='background-image:url("img/bg/bg3.jpg")'>
       <div class='cell'>
         <div class='my-card'>
           <h4 class='publication-heading'>
-            <%=results.publications[i].title %>
+            <%-results.publications[i].title %>
           </h4>
           <h5 class='publiction-journel'><%=results.publications[i].journal %></h5>
         </div>
