--- a/views/pages/labFun.ejs
+++ b/views/pages/labFun.ejs
@@ -9,7 +9,12 @@ style='background-image:url("img/bg/bg1.jpg")'>
     </h1>
   </div>
 </div>
-<div class='grid-x grid-container add-padd' >
+<div class='grid-x grid-container medium-up-1' >
+  <div class='cell'>
+    <img class='we-believe-img' src='<% if(dirName) { %><%=dirName%><%}%>/img/Labfun/weBelieve.png'>
+  </div>
+</div>
+<div id='labFun' class='grid-x grid-container add-padd' >
   <div class='cell center'>
     <h3>Lab Fun</h3>
   </div>
@@ -36,6 +41,7 @@ style='background-image:url("img/bg/bg1.jpg")'>
   <% }}%>
 </div>
 <div
+id='funThings'
 class='bg-img'
 style='background-image:url("img/bg/bg2.jpg")'>
   <div class='bg-center-container'>
@@ -161,6 +167,7 @@ style='background-image:url("img/bg/bg2.jpg")'>
 </div>
 
 <div
+id='testimonials'
 class='bg-img'
 style='background-image:url("img/bg/bg3.jpg")'>
   <div class='bg-center-container'>
@@ -236,6 +243,7 @@ style='background-image:url("img/bg/bg3.jpg")'>
   </div>
 </div>
 <div
+id='collaboration'
 class='bg-img'
 style='background-image:url("img/bg/bg4.jpg")'>
   <div class='bg-center-container'>
