--- a/views/pages/labFun.ejs
+++ b/views/pages/labFun.ejs
@@ -12,6 +12,19 @@ style='background-image:url("img/bg/bg1.jpg")'>
 <div class='grid-x grid-container medium-up-1' >
   <div class='cell'>
     <img class='we-believe-img' src='<% if(dirName) { %><%=dirName%><%}%>/img/Labfun/weBelieve.png'>
+    <a class='animated-arrow' href="./news">
+      <span class='the-arrow -left'>
+        <span class='shaft'></span>
+      </span>
+      <span class='main'>
+        <span class='text'>
+          View Lab Manuel
+        </span>
+        <span class='the-arrow -right'>
+          <span class='shaft'></span>
+        </span>
+      </span>
+    </a>
   </div>
 </div>
 <div id='labFun' class='grid-x grid-container add-padd' >
@@ -302,7 +315,40 @@ style='background-image:url("img/bg/bg4.jpg")'>
     </div>
   </div>
 </div>
-
+<div
+id='resources'
+class='bg-img'
+style='background-image:url("img/bg/bg1.jpg")'>
+  <div class='bg-center-container'>
+    <h1 class='bg-heading'>
+      Resources
+    </h1>
+  </div>
+</div>
+<div class='grid-x grid-container grid-padding-x grid-padding-y medium-up-1' >
+  <div class='cell'>
+    <h4>Aging related resources</h4>
+    <p>
+      AFAR: <a href='https://www.afar.org/'>https://www.afar.org/</a><br/>
+      Aging Research and Drug Discovery Meeting: <a href='http://www.agingpharma.org'>http://www.agingpharma.org</a><br/>
+      Aging Science talks: <a href='http://www.lamminglab.org/agingscitalks.html'>http://www.lamminglab.org/agingscitalks.html</a><br/>
+      CSH Mechanism of Aging: <a href='https://meetings.cshl.edu/meetings.aspx?meet=aging&year=20'>https://meetings.cshl.edu/meetings.aspx?meet=aging&year=20</a>
+    </p>
+  </div>
+  <div class='cell'>
+    <h4>Metabolism related resources</h4>
+    <p>
+      Cold Spring Harbour Laboratory: Evolving Concept of Mitochondria: <a href='http://library.cshl.edu/Meetings/Mitochondria/program.php'>http://library.cshl.edu/Meetings/Mitochondria/program.php</a>
+      Metabolomics: Understanding Metabolism in the 21st Century <a href='https://www.futurelearn.com/courses/metabolomics'>https://www.futurelearn.com/courses/metabolomics</a>
+    </p>
+  </div>
+  <div class='cell'>
+    <h4>COVID-19 updates</h4>
+    <p>
+      Stateupdates: <a href='https://www.health.pa.gov/topics/disease/coronavirus/Pages/Coronavirus.aspx'>https://www.health.pa.gov/topics/disease/coronavirus/Pages/Coronavirus.aspx</a>
+    </p>
+  </div>
+</div>
 
 <% include ../partials/footer %>
 <% include ../partials/tail %>
