--- a/views/pages/labFun.ejs
+++ b/views/pages/labFun.ejs
@@ -10,7 +10,7 @@ style='background-image:url("img/bg/bg1.jpg")'>
   </div>
 </div>
 <div class='grid-x grid-container medium-up-1' >
-  <div class='cell'>
+  <div class='cell center'>
     <img class='we-believe-img' src='<% if(dirName) { %><%=dirName%><%}%>/img/Labfun/weBelieve.png'>
     <a class='animated-arrow' href="./news">
       <span class='the-arrow -left'>
