--- a/views/pages/labFun.ejs
+++ b/views/pages/labFun.ejs
@@ -12,6 +12,8 @@ style='background-image:url("img/bg/bg1.jpg")'>
 <div class='grid-x grid-container medium-up-1' >
   <div class='cell center'>
     <img class='we-believe-img' src='<% if(dirName) { %><%=dirName%><%}%>/img/Labfun/weBelieve.png'>
+  </div>
+  <div class='cell center'>
     <a class='animated-arrow' href="./news">
       <span class='the-arrow -left'>
         <span class='shaft'></span>
