--- a/views/pages/labFun.ejs
+++ b/views/pages/labFun.ejs
@@ -9,7 +9,7 @@ style='background-image:url("img/bg/bg1.jpg")'>
     </h1>
   </div>
 </div>
-<div class='grid-x grid-container medium-up-1' >
+<div class='grid-x grid-container medium-up-1 add-padd' >
   <div class='cell center'>
     <img class='we-believe-img' src='<% if(dirName) { %><%=dirName%><%}%>/img/Labfun/weBelieve.png'>
   </div>
