--- a/views/pages/labFun.ejs
+++ b/views/pages/labFun.ejs
@@ -29,9 +29,14 @@ style='background-image:url("img/bg/bg1.jpg")'>
     </a>
   </div>
 </div>
-<div id='labFun' class='grid-x grid-container add-padd' >
-  <div class='cell center'>
-    <h3>Lab Fun</h3>
+<div
+id='labFun'
+class='bg-img'
+style='background-image:url("img/bg/bg2.jpg")'>
+  <div class='bg-center-container'>
+    <h1 class='bg-heading'>
+      Lab Fun
+    </h1>
   </div>
 </div>
 <div class='grid-x grid-container medium-up-3' >
@@ -58,7 +63,7 @@ style='background-image:url("img/bg/bg1.jpg")'>
 <div
 id='funThings'
 class='bg-img'
-style='background-image:url("img/bg/bg2.jpg")'>
+style='background-image:url("img/bg/bg3.jpg")'>
   <div class='bg-center-container'>
     <h1 class='bg-heading'>
       Fun things we do
