--- a/views/pages/labFun.ejs
+++ b/views/pages/labFun.ejs
@@ -20,7 +20,7 @@ style='background-image:url("img/bg/bg1.jpg")'>
       </span>
       <span class='main'>
         <span class='text'>
-          View Lab Manuel
+          View Lab Manual
         </span>
         <span class='the-arrow -right'>
           <span class='shaft'></span>
