--- a/views/pages/researchInterests.ejs
+++ b/views/pages/researchInterests.ejs
@@ -69,7 +69,7 @@ style='background-image:url("<% if(dirName) { %><%=dirName%><%}%>/img/bg/bg2.jpg
           </p>
         </div>
       </div>
-      <% } else if (researchData.title === 'Defining your composite 'biological' age')
+      <% } else if (researchData.title === "Defining your composite 'biological' age")
       {%>
         <p><em>“Why people age differently?”</em></p>
         <p>Although, one’s chronological age maybe the same (the age that you calculate from your birth certificate), two people who are 65, rarely feel the same. One seems healthy, strong, may complain occasionally about joint pain- but overall is fit, whereas, the other suffers from diabetes, dementia and heart disease. WHY? 
