--- a/views/pages/publications.ejs
+++ b/views/pages/publications.ejs
@@ -22,7 +22,7 @@ style='background-image:url("img/bg/bg1.jpg")'>
           <i class="fa fi-book"></i>
         </div>
         <div class="timeline-content <%= direction %>">
-          <h2 class="timeline-content-date"><%= results[i].title %></h2>
+          <h2 class="timeline-content-date"><%- results[i].title %></h2>
           <p><%= results[i].author %> <%= results[i].journal %></p>
         </div>
       </div>
