--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8,6 +8,10 @@ p {
   font-family: "hk_groteskmedium",sans-serif;
   font-size: 18px;
 }
+li {
+  font-family: "hk_groteskmedium",sans-serif;
+  font-size: 18px;
+}
 h1, h2, h3, h4, h5, h5 {
   font-family: "Amiri",serif;
 }
