--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -27,7 +27,7 @@ style='background-image:url("img/bg/bg1.jpg")'>
     </div>
   </div>
   <div class='small-12 cell'>
-    <h4 class='center'>
+    <h4 class='center my-small-h4 '>
       Developing therapies to target the primary risk factor for all of these diseases, <em>aging itself</em>, is a promising yet challenging solution. The first step is to define the molecular mechanisms that drive aging. We believe that this will reveal novel therapeutic targets that can be further harnessed to extend healthy life.
     </h4>
   </div>
