--- a/public/css/app.css
+++ b/public/css/app.css
@@ -873,3 +873,10 @@ hr.center-ball:before {
   margin: auto;
   margin-bottom: 30px;
 }
+
+
+@media print, screen and (min-width: 40em) {
+  .my-small-h4 {
+      font-size: 1.4625rem;
+  }
+}
