--- a/views/pages/labNews.ejs
+++ b/views/pages/labNews.ejs
@@ -17,7 +17,7 @@ style='background-image:url("img/bg/bg1.jpg")'>
           class='card-img'
           style='background-image: url("<%=results[i].image %>");'
         ></div>
-        <h4><%=results[i].name %></h4>
+        <h4><%-results[i].name %></h4>
         <p class="news-text">
           <%=results[i].description %>
         </p>
