--- a/views/pages/labFun.ejs
+++ b/views/pages/labFun.ejs
@@ -14,7 +14,7 @@ style='background-image:url("img/bg/bg1.jpg")'>
     <img class='we-believe-img' src='<% if(dirName) { %><%=dirName%><%}%>/img/Labfun/weBelieve.png'>
   </div>
   <div class='cell center'>
-    <a class='animated-arrow' href="./news">
+    <a class='animated-arrow' href="https://drive.google.com/file/d/1SOl9w8lHMWpAxXemjPdJI9JW_GMwU_4m/view?usp=sharing">
       <span class='the-arrow -left'>
         <span class='shaft'></span>
       </span>
