--- a/views/pages/labFun.ejs
+++ b/views/pages/labFun.ejs
@@ -334,7 +334,7 @@ style='background-image:url("img/bg/bg1.jpg")'>
 </div>
 <div class='grid-x grid-container grid-padding-x grid-padding-y medium-up-1 add-padd' >
   <div class='cell'>
-    <h4>Aging related resources</h4>
+    <h4 class='bold'>Aging related resources</h4>
     <p>
       AFAR: <a href='https://www.afar.org/'>https://www.afar.org/</a><br/>
       Aging Research and Drug Discovery Meeting: <a href='http://www.agingpharma.org'>http://www.agingpharma.org</a><br/>
@@ -343,16 +343,16 @@ style='background-image:url("img/bg/bg1.jpg")'>
     </p>
   </div>
   <div class='cell'>
-    <h4>Metabolism related resources</h4>
+    <h4 class='bold'>Metabolism related resources</h4>
     <p>
       Cold Spring Harbour Laboratory: Evolving Concept of Mitochondria: <a href='http://library.cshl.edu/Meetings/Mitochondria/program.php'>http://library.cshl.edu/Meetings/Mitochondria/program.php</a><br/>
       Metabolomics: Understanding Metabolism in the 21st Century <a href='https://www.futurelearn.com/courses/metabolomics'>https://www.futurelearn.com/courses/metabolomics</a>
     </p>
   </div>
   <div class='cell'>
-    <h4>COVID-19 updates</h4>
+    <h4 class='bold'>COVID-19 updates</h4>
     <p>
-      Stateupdates: <a href='https://www.health.pa.gov/topics/disease/coronavirus/Pages/Coronavirus.aspx'>https://www.health.pa.gov/topics/disease/coronavirus/Pages/Coronavirus.aspx</a>
+      State Updates: <a href='https://www.health.pa.gov/topics/disease/coronavirus/Pages/Coronavirus.aspx'>https://www.health.pa.gov/topics/disease/coronavirus/Pages/Coronavirus.aspx</a>
     </p>
   </div>
 </div>
