--- a/views/pages/labFun.ejs
+++ b/views/pages/labFun.ejs
@@ -350,7 +350,7 @@ style='background-image:url("img/bg/bg1.jpg")'>
     </p>
   </div>
   <div class='cell'>
-    <h4 class='bold'>COVID-19 updates</h4>
+    <h4 class='bold'>COVID-19</h4>
     <p>
       State Updates: <a href='https://www.health.pa.gov/topics/disease/coronavirus/Pages/Coronavirus.aspx'>https://www.health.pa.gov/topics/disease/coronavirus/Pages/Coronavirus.aspx</a>
     </p>
