--- a/views/pages/labFun.ejs
+++ b/views/pages/labFun.ejs
@@ -280,8 +280,12 @@ style='background-image:url("img/bg/bg4.jpg")'>
         <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
       </div>
       <div class='cell auto'>
-        <h5>Patricia Opresko, Ph.D | 
-          <a href='http://www.opreskolab.com/' target='blank' ><i class="fi-web"></i></a></h5> 
+        <h5>
+          Patricia Opresko, Ph.D
+        </h5> 
+      </div>
+      <div class='cell shrink'>
+        <a href='http://www.opreskolab.com/' target='blank' ><i class="fi-web"></i></a>
       </div>
     </div>
     <div class='grid-x grid-padding-x'>
