--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -170,7 +170,7 @@ style='background-image:url("img/bg/bg4.jpg")'>
         </div>
         <div class='cell auto out-vc'>
           <div class='in-vc'>
-            <h5><%=results.team[i].name %> <%=results.team[i].title ? ` | ${results.team[i].title}` : `` %></h5>
+            <h5><b><%=results.team[i].name %></b> <%=results.team[i].title ? ` | ${results.team[i].title}` : `` %></h5>
             <p class='web-pro-text'><%=results.team[i].Description %></p>
           </div>
         </div>
