--- a/views/pages/labFun.ejs
+++ b/views/pages/labFun.ejs
@@ -197,6 +197,30 @@ style='background-image:url("img/bg/bg3.jpg")'>
   </div>
 </div>
 <div class='grid-x grid-container grid-padding-y grid-padding-x add-padd'>
+  <div class='cell'>
+    <div class='grid-x grid-padding-x grid-margin-y team-card' data-equalizer>
+      <%
+      if (results && results.testimonials) {
+      for (let i = 0; i < results.testimonials.length; i++) { 
+    %>
+      <div class='cell shrink center out-vc border-right'>
+        <div class='in-vc'>
+          <img class='team-img' src='<%=results.testimonials[i].image %>'>
+        </div>
+      </div>
+      <div class='cell auto out-vc'>
+        <div class='in-vc'>
+          <h5><b><%=results.testimonials[i].name %></b> <%=results.testimonials[i].title ? ` | ${results.testimonials[i].title}` : `` %></h5>
+          <p class='web-pro-text'><%=results.testimonials[i].smallDesc %></p>
+          <p class='web-pro-text'><a data-toggle="panel-<%=i%>">Read More</a></p>
+          <div data-toggler>
+            <p id='panel-<%=i%>' class='web-pro-text'><%=results.testimonials[i].description %></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <%}}%>
   <div class="cell">
     <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
       <div class="orbit-wrapper">
