--- a/views/pages/labFun.ejs
+++ b/views/pages/labFun.ejs
@@ -213,78 +213,14 @@ style='background-image:url("img/bg/bg3.jpg")'>
           <h5><b><%=results.testimonials[i].name %></b> <%=results.testimonials[i].title ? ` | ${results.testimonials[i].title}` : `` %></h5>
           <p class='web-pro-text'><%=results.testimonials[i].smallDesc %></p>
           <p class='web-pro-text'><a data-toggle="panel-<%=i%>">Read More</a></p>
-          <div data-toggler>
-            <p id='panel-<%=i%>' class='web-pro-text'><%=results.testimonials[i].description %></p>
+          <div class='hidden-pannel' data-toggler id='panel-<%=i%>'>
+            <p class='web-pro-text'><%=results.testimonials[i].description %></p>
           </div>
         </div>
       </div>
     </div>
   </div>
   <%}}%>
-  <div class="cell">
-    <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
-      <div class="orbit-wrapper">
-        <div class="orbit-controls">
-          <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
-          <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
-        </div>
-        <ul class="orbit-container">
-          <%
-            if (results && results.testimonials) {
-            for (let i = 0; i < results.testimonials.length; i++) { 
-          %>
-          <li class="is-active orbit-slide">
-            <div class="full-width-testimonial">
-              <div class="full-width-testimonial-section">
-                <div class="full-width-testimonial-icon text-center">
-                  <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                    width="41px" height="34px" viewBox="-235 240 41 34" style="enable-background:new -235 240 41 34;" xml:space="preserve">
-                      <path class="quote-path" d="M-231.3,260.4c0-5,1.3-8.8,3.7-11.7c2.4-2.8,6-4.6,10.5-5.5v5c-3.5,1-6,2.8-7.1,5.5c-0.7,1.4-0.9,2.8-0.8,4
-                        h8.1v12.8h-14.4V260.4z"/>
-                      <path class="quote-path" d="M-212,260.4c0-5,1.3-8.8,3.7-11.7c2.4-2.8,6-4.6,10.5-5.5v5c-3.5,1-6,2.8-7.1,5.5c-0.7,1.4-0.9,2.8-0.8,4h8.1
-                        v12.8H-212V260.4z"/>
-                  </svg>
-                </div>
-                <div class="full-width-testimonial-content">
-                  <h5 class="full-width-testimonial-text">
-                    <%=results.testimonials[i].description %>
-                  </h5>
-                  <div class='testimonial-profile'>
-                    <div class='grid-x'>
-                      <div class='medium-6 cell medium-offset-3'>
-                        <div class='grid-x grid-padding-x'>
-                          <div class='cell shrink border-right'>
-                            <img class='testimonial-img' src='<%=results.testimonials[i].image %>'>
-                          </div>
-                          <div class='cell auto'>
-                            <p class="full-width-testimonial-source"><%=results.testimonials[i].name %></p>
-                            <span class="full-width-testimonial-source-context"><%=results.testimonials[i].title %></span>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </li>
-          <%}}%>
-        </ul>
-      </div>
-      <nav class="orbit-bullets">
-        <button class="is-active" data-slide="0">
-          <span class="show-for-sr">First slide details.</span>
-          <span class="show-for-sr" data-slide-active-label>Current Slide</span>
-        </button>
-        <%
-          if (results && results.testimonials) {
-          for (let i = 1; i < results.testimonials.length; i++) { 
-        %>
-          <button data-slide="<%=i %>"><span class="show-for-sr"></span></button>
-        <%}}%>
-      </nav>
-    </div>
-  </div>
 </div>
 <div
 id='collaboration'
