adding new testis

--- a/views/pages/labFun.ejs
+++ b/views/pages/labFun.ejs
@@ -239,7 +239,7 @@ style='background-image:url("img/bg/bg4.jpg")'>
       <div class='cell shrink border-right'>
         <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
       </div>
-      <div class='cell auto'>
+      <div class='cell auto border-right'>
         <h5>
           Patricia Opresko, Ph.D
         </h5> 
@@ -252,36 +252,48 @@ style='background-image:url("img/bg/bg4.jpg")'>
       <div class='cell shrink border-right'>
         <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
       </div>
-      <div class='cell auto'>
-        <h5>Charleen Chu, Ph.D. | 
-          <a href='https://chulab.weebly.com/' target='blank' ><i class="fi-web"></i></a></h5> 
+      <div class='cell auto border-right'>
+        <h5>Charleen Chu, Ph.D.
+          </h5> 
+      </div>
+      <div class='cell shrink'>
+        <a href='https://chulab.weebly.com/' target='blank' ><i class="fi-web"></i></a>
       </div>
     </div>
     <div class='grid-x grid-padding-x'>
       <div class='cell shrink border-right'>
         <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
       </div>
-      <div class='cell auto'>
-        <h5>Steven Chan,MD, PhD, FAHA | 
-          <a href='https://www.sychanlab.pitt.edu/' target='blank' ><i class="fi-web"></i></a></h5> 
+      <div class='cell auto border-right'>
+        <h5>Steven Chan,MD, PhD, FAHA
+          </h5> 
+      </div>
+      <div class='cell shrink'>
+        <a href='https://www.sychanlab.pitt.edu/' target='blank' ><i class="fi-web"></i></a>
       </div>
     </div>
     <div class='grid-x grid-padding-x'>
       <div class='cell shrink border-right'>
         <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
       </div>
-      <div class='cell auto'>
-        <h5>Tzahi Cohen-Karni | 
-          <a href='https://www.cohenkarni.com/' target='blank' ><i class="fi-web"></i></a></h5> 
+      <div class='cell auto border-right'>
+        <h5>Tzahi Cohen-Karni
+          </h5> 
+      </div>
+      <div class='cell shrink'>
+        <a href='https://www.cohenkarni.com/' target='blank' ><i class="fi-web"></i></a>
       </div>
     </div>
     <div class='grid-x grid-padding-x'>
       <div class='cell shrink border-right'>
         <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
       </div>
-      <div class='cell auto'>
-        <h5>Michael Jurckzak | 
-          <a href='https://profiles.dom.pitt.edu/faculty_info.aspx/Jurczak6570' target='blank' ><i class="fi-web"></i></a></h5> 
+      <div class='cell auto border-right'>
+        <h5>Michael Jurckzak
+          </h5> 
+      </div>
+      <div class='cell shrink'>
+        <a href='https://profiles.dom.pitt.edu/faculty_info.aspx/Jurczak6570' target='blank' ><i class="fi-web"></i></a>
       </div>
     </div>
   </div>
