--- a/views/pages/labFun.ejs
+++ b/views/pages/labFun.ejs
@@ -196,8 +196,8 @@ style='background-image:url("img/bg/bg3.jpg")'>
     </h1>
   </div>
 </div>
-<div class='grid-x grid-container grid-padding-y grid-padding-x add-padd'>
-  <div class='cell'>
+<div class='grid-x large-offset-2 grid-container grid-padding-y grid-padding-x add-padd'>
+  <div class='cell large-8'>
     <div class='grid-x grid-padding-x grid-margin-y team-card' data-equalizer>
       <%
       if (results && results.testimonials) {
