--- a/views/pages/labFun.ejs
+++ b/views/pages/labFun.ejs
@@ -220,7 +220,7 @@ style='background-image:url("img/bg/bg3.jpg")'>
       </div>
     </div>
   <%}}%>
-</div>
+  </div>
 </div>
 <div
 id='collaboration'
@@ -235,7 +235,7 @@ style='background-image:url("img/bg/bg4.jpg")'>
 
 <div class='grid-x grid-container medium-offset-3 large-offset-4 grid-padding-y grid-padding-x add-padd' >
   <div class='medium-6 large-5 cell'>
-    <div class='grid-x grid-padding-x'>
+    <div class='grid-x grid-padding-x grid-padding-y'>
       <div class='cell shrink border-right'>
         <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
       </div>
